--- a/diagnosis.html
+++ b/diagnosis.html
@@ -93,9 +93,9 @@
   <section id="hero" class="gray d-flex align-items-center">
 
     <div class="container">
-      <div class="alert alert-danger mb-5" role="alert">
-          <a href="agency.html" style="text-decoration:none">We are helping businesses build AI ChatGPT-powered WhatsApp Customer Service and Lead Generation Chatbots. Learn more 👉</a>
-        </div>
+      <div class="alert alert-danger mb-3" role="alert">
+          <a href="agency" style="text-decoration:none">We are helping your organisation build custom AI solutions, chatbots and automations. Learn more 👉</a>
+      </div>
       <div class="row">
       <div class="col-lg-13 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
           <div>
@@ -142,91 +142,175 @@
 </div>
 </div>
 
+<!-- ======= Contact Section ======= -->
+<section id="contact" class="contact">
+  <div class="container">
+
+    <div class="section-title">
+      <h2 class="tabmedtitle mb-4">🧠 We Believe AI & Telemedicine is the Future of Healthcare</h2>
+      <iframe width="380" height="213" src="https://www.youtube.com/embed/RXOyxN79w5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+
+  </div>
+</section><!-- End Contact Section -->
+<!-- ======= Frequently Asked Questions Section ======= -->
+<section id="faq" class="faq section-bg">
+  <div class="container">
+    <div class="text-center">
+      <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
+    </div>
+
+    <div class="section-title">
+
+      <h1>Tabmed Empowers Your organisation with AI Automations & Solutions</h1>
+      <p class="mb-3">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge technologies to drive business growth and efficiency through chatbots and automation. </p>
+      <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-right"></i>Learn more about us</button></a>
+   </div>
+
+    <div class="accordion-list">
+      <ul>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">Advanced Chatbot Flows with Botpress & Stack AI<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              Our expertise in Botpress enables us to build customized AI-enabled chatbots for advanced use cases that can handle intricate algorithmic flows, providing dynamic responses based on user inputs, intent, address, and other contextual variables. Whether it's a multi-step booking process or a complex troubleshooting guide, our chatbots can guide users with precision. These chatbots can be deployed across every platform such as WhatsApp, Instagram, Slack, Telegram, Websites etc.
+            </p>
+          </div>
+        </li>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Deployable Chatbots Across Any Platform<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              Cross-platform deployment with Botpress: We understand that your customers are spread across different digital platforms. Therefore, chatbots can be seamlessly deployed on various channels such as WhatsApp, Instagram, Slack, Telegram, and websites. With over 2 billion active users worldwide, integrating a ChatGPT-driven chatbot into WhatsApp allows businesses to tap into this vast user base, making your services more accessible and driving growth.
+            </p>
+          </div>
+        </li>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">AI Consulting <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              Amidst the influx of millions of new AI tools each week, we'll help you navigate the landscape and discern the solutions best suited to optimize your business workflows for increased productivity and efficiency. Our services include feasibility assessments to determine the viability of AI integration in your operations, use case identification to pinpoint areas ripe for AI application, performance evaluation to ensure your AI solutions are delivering the desired results, and strategy development to formulate a long-term vision for AI in your business.
+            </p>
+          </div>
+        </li>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">Workflow Automation with Zapier<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              We leverage the power of Zapier to automate repetitive tasks across various applications. By creating automated workflows, we enable your team to focus on strategic operations, reducing manual effort and improving efficiency. For instance, we can set up a workflow where an email from a customer can automatically create a ticket in your CRM, assign it to a team member, and send a personalized response to the customer - all without any manual intervention.
+            </p>
+          </div>
+        </li>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">Custom Chatbots with Langchain & Vector Embeddings<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              Elevate your customer experience with our custom chatbots powered by Langchain, vector embeddings, and large language models. With these advanced technologies at our fingertips, we craft AI chatbots meticulously tailored to your business needs. These chatbots deliver instant, personalized responses, adeptly handling a multitude of use cases. Whether you need a virtual assistant to answer customer inquiries, an intelligent bot to guide users through your services, or a savvy chatbot to drive engagement, our custom solutions are designed to enhance your interactions and enrich your business outcomes.
+            </p>
+          </div>
+        </li>
+
+        <li data-aos="fade-up">
+          <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">Complete Front-end Web Development<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+          <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
+            <p>
+              Transcend the ordinary with our comprehensive front-end web development services. At Tabmed, we believe in crafting digital experiences that are not only visually stunning but also functionally robust. Leveraging the latest technologies and design trends, we build websites that are intuitive, engaging, and tailored to your specific business needs. Our dedicated team of experts ensures seamless navigation, fast load times, and mobile responsiveness, offering an unmatched user experience that keeps your audience coming back for more. Let us turn your vision into a captivating reality that enhances your digital presence and propels your business forward.
+            </p>
+          </div>
+        </li>
+
+
+
+
+      </ul>
+    </div>
+
+
+  </div>
+</section>
+
+
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div>
-      <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
-    </div>
+    <!-- ======= Footer ======= -->
+  <footer id="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h4>Support Our Startup</h4>
-            <p>TabMed is founded by 2 HKU medical students. At the developmental and incubation phase, we are outreaching partners and funding from surrounding networks, HKU, HKSTP and Cyberport. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>TabMed</h3>
-            <p>
-              <!-- A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br> -->
-              <strong>Phone:</strong><br>  +852 69025557 | +852 93085812<br>
-              <strong>Email:</strong> tabmedhk@gmail.com<br>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="agency.html">Incorporating ChatGPT into Your Business</a></li>
-            </ul>
-          </div>
-<!--
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Follow us on Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong> for our startup developmental journey.</p>
-            <div class="social-links mt-3">
-              <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+            <div class="col-lg-3 col-md-6 footer-contact text-decoration">
+              <h3>tabmed.</h3>
+              <p>
+                Empowering Innovation in Healthcare & Education Through AI: Your Partner for Automation Solutions, Custom Chatbots, and Voice-enabled Roleplay Stimulators.<br><br>
+                <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6833 3398‬</a></strong><br>
+                <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
+                <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
+                <div class="social-links mt-3">
+                  <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                  <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                </div>
+              </p>
             </div>
-          </div>
 
+            <div class="col-lg-3 col-md-6 footer-links">
+              <h4>🧠 MakeGPT</h4>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Documentation</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">24/7 Customer Support</a></li>
+
+              </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-links">
+              <h4>💬 Dialoguify</h4>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">Patient Stimulation</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">Language Learning</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">Legal and Argument</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">Pitching & Negotiation</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#">Interview Practice</a></li>
+              </ul>
+            </div>
+
+
+            <div class="col-lg-3 col-md-6 footer-links">
+              <h4>🥼 AI Solutions in Healthcare</h4>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly - Sexual Health AI</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Tabmed Telemedicine AI App</a></li>
+
+              </ul>
+            </div>
+
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container py-4">
-      <div class="copyright">
-        &copy; Copyright 2023 <strong><span>TabMed Limited Company</span></strong>. All Rights Reserved
-      </div>
-      <!-- <div class="credits">
-        < All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
-  </footer><!-- End Footer -->
+      <div class="container py-4">
+        <div class="copyright">
+          &copy; Copyright 2023 <strong><span>Tabmed Limited</span></strong>. All Rights Reserved.
+        </div>
+        <!-- <div class="credits">
+          < All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/ -->
+          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+        </div>
+      </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
