--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Custom ChatGPT Trained on Your Data | Tabmed</title>
+  <title>Empowering Innovation in Healthcare & Education Through AI | Tabmed</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -233,23 +233,86 @@
   </section>
 
 
-    <!-- ======= Frequently Asked Questions Section ======= -->
-   <section id="faq" class="faq section-bg">
-      <div class="container">
-        <div class="text-center">
-          <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
-        </div>
-
-        <div class="section-title p-3">
-
-          <h1 class="mt-2">Tabmed Empowers Your Organisation with AI Automations & Solutions</h1>
-          <p class="my-4">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge AI technologies to drive business growth and efficiency through custom chatbots and automation. </p>
-          <a style="text-decoration:none" href="agency"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more about us</button></a>
-
-
-
+  <!-- ======= Frequently Asked Questions Section ======= -->
+ <section id="faq" class="faq section-bg">
+    <div class="container">
+      <div class="text-center">
+        <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
       </div>
-    </section>
+
+      <div class="section-title">
+
+        <h1>Tabmed Empowers Your organisation with AI Automations & Solutions</h1>
+        <p class="mb-3">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge technologies to drive business growth and efficiency through chatbots and automation. </p>
+        <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-right"></i>Learn more about us</button></a>
+     </div>
+
+      <div class="accordion-list">
+        <ul>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">Advanced Chatbot Flows with Botpress & Stack AI<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                Our expertise in Botpress enables us to build customized AI-enabled chatbots for advanced use cases that can handle intricate algorithmic flows, providing dynamic responses based on user inputs, intent, address, and other contextual variables. Whether it's a multi-step booking process or a complex troubleshooting guide, our chatbots can guide users with precision. These chatbots can be deployed across every platform such as WhatsApp, Instagram, Slack, Telegram, Websites etc.
+              </p>
+            </div>
+          </li>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Deployable Chatbots Across Any Platform<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                Cross-platform deployment with Botpress: We understand that your customers are spread across different digital platforms. Therefore, chatbots can be seamlessly deployed on various channels such as WhatsApp, Instagram, Slack, Telegram, and websites. With over 2 billion active users worldwide, integrating a ChatGPT-driven chatbot into WhatsApp allows businesses to tap into this vast user base, making your services more accessible and driving growth.
+              </p>
+            </div>
+          </li>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">AI Consulting <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                Amidst the influx of millions of new AI tools each week, we'll help you navigate the landscape and discern the solutions best suited to optimize your business workflows for increased productivity and efficiency. Our services include feasibility assessments to determine the viability of AI integration in your operations, use case identification to pinpoint areas ripe for AI application, performance evaluation to ensure your AI solutions are delivering the desired results, and strategy development to formulate a long-term vision for AI in your business.
+              </p>
+            </div>
+          </li>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">Workflow Automation with Zapier<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                We leverage the power of Zapier to automate repetitive tasks across various applications. By creating automated workflows, we enable your team to focus on strategic operations, reducing manual effort and improving efficiency. For instance, we can set up a workflow where an email from a customer can automatically create a ticket in your CRM, assign it to a team member, and send a personalized response to the customer - all without any manual intervention.
+              </p>
+            </div>
+          </li>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">Custom Chatbots with Langchain & Vector Embeddings<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                Elevate your customer experience with our custom chatbots powered by Langchain, vector embeddings, and large language models. With these advanced technologies at our fingertips, we craft AI chatbots meticulously tailored to your business needs. These chatbots deliver instant, personalized responses, adeptly handling a multitude of use cases. Whether you need a virtual assistant to answer customer inquiries, an intelligent bot to guide users through your services, or a savvy chatbot to drive engagement, our custom solutions are designed to enhance your interactions and enrich your business outcomes.
+              </p>
+            </div>
+          </li>
+
+          <li data-aos="fade-up">
+            <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">Complete Front-end Web Development<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
+              <p>
+                Transcend the ordinary with our comprehensive front-end web development services. At Tabmed, we believe in crafting digital experiences that are not only visually stunning but also functionally robust. Leveraging the latest technologies and design trends, we build websites that are intuitive, engaging, and tailored to your specific business needs. Our dedicated team of experts ensures seamless navigation, fast load times, and mobile responsiveness, offering an unmatched user experience that keeps your audience coming back for more. Let us turn your vision into a captivating reality that enhances your digital presence and propels your business forward.
+              </p>
+            </div>
+          </li>
+
+
+
+
+        </ul>
+      </div>
+
+
+    </div>
+  </section>
 
 
 
